--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </h1> 
   <div class="about_me">
     <p>
-      Programmer,Computer Scientist, Low Level developer, Distributed and Decentralized systems engineer. Part of <a href='https://enigma.co/'>@enigmampc</a>.
+      Programmer,Computer Scientist, Low Level developer, Distributed and Decentralized systems engineer. Part of <a href='https://www.similarweb.com/'>@SimilarWeb</a>.
     </p>
   </div>
   <h1>
@@ -41,6 +41,7 @@
 	<li><a href='https://crates.io/crates/lamport_signatures'>Lamport Signatures</a> -Rust implementation of Cryptographic Post quantom signature scheme </li>
         <li><a href='https://github.com/ofiriluz/octopus'>Octopus</a>  - Programmer profiler based on his Github profile, written in Python</li>
         <li><a href='http://ethereumisrael.org/'>ethereumisrael.org</a> - Ethereum community website for Israel </li>
+        <li><a href='https://github.com/Isan-Rivkin/k8s-cluster-switcher-ubuntu-indicator'>Kubernetes Switcher</a> - Kubernetes Cluster Switcher for Ubuntu </li>
         <li><a href='https://github.com/Isan-Rivkin/p2p_platform_main_server'>P2P SDK for CLI games</a>  - A C++ implementation SDK for P2P managing of messages </li>
         <li><a href='https://github.com/Isan-Rivkin/sokoban_client'>Sokoban</a>  - A 2D Game developed in Java</li>
       </ul>
@@ -53,8 +54,10 @@
     <p>
         Studied Commputer Science, Bs.c with Machine Learning internship.<br>
         Worked as a C++ developer at a Robotics Company called <a href="https://www.cogniteam.com/">Cogniteam.</a> <br>
-        During studies I discoverd Bitcoin and Ethereum, worked on few open source projects in the Ethereum eco system.<br> 
-        Currently, I am working in an open-source company called <a href='https://enigma.co/'>Enigma</a> developing a Secure Decentralized protocol to allow Secret-Contracts. <br>
+        During studies I discoverd Bitcoin and Ethereum, worked on few open source projects in the Ethereum eco system such as <a href="http://ethereumisrael.org/">Community of 7K members.</a>.<br> 
+        Following that path, I worked at an open-source company called <a href='https://enigma.co/'>Enigma</a> developing a Secure Decentralized protocol to allow Secret-Contracts. <br>
+        <b>Today</b>, I am working as a <b>Data infrastructure engineer</b> (SRE role) at <a href='https://www.similarweb.com/'>SimilarWeb</a>. <br>
+        My focus is building "Self Service" platform for the R&D organization with technologies such as Kubernetes, AWS, Go lang etc. <br>
       </p>
  </div>
  <h1>Contact</h1>
