--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <p>
       Projects I am being a part of:
       <ul>
+	<li><a href='https://github.com/similarweb/finala'>finala</a> - A resource cloud scanner that analyzes written in golang</li>
         <li><a href='https://github.com/enigmampc/enigma-p2p'>enigma-p2p</a> - Full featured P2P node based on <a href="https://en.wikipedia.org/wiki/Kademlia">Kademlia DHT</a> written in NodeJS</li>
         <li><a href='https://github.com/enigmampc/enigma-core'>Enigma Core</a> - Worker Node written in Rust, implmenting the <a href='https://enigma.co/protocol/'> Enigma Protocol</a></li>
         <li><a href='https://github.com/enigmampc/smart_contract_marketplace'>Enigma Marketplace</a>  - Ethereum Smart-Contracts written in Solidity for the<a href="https://enigma.co/marketplace/smart-contract.html"> Enigma Marketplace</a> </li>
