--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
 
   <meta charset="utf-8">
-
+  <meta name="go-latest" content="route53-cli 1.2.3 latest version">
   <title>IsanRiv</title>
   <meta name="description" content="sort of cv">
   <meta name="author" content="Isan Rivkin">
