--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 </head>
 
 <body>
+
   <h1>
     About Me
-  </h1> 
+  </h1>
+	<script async src="https://api.countapi.xyz/hit/isan-rivkin-cli-versions/visits"></script>
   <div class="about_me">
     <p>
       Programmer,Computer Scientist, Low Level developer, Distributed and Decentralized systems engineer. Part of <a href='https://www.similarweb.com/'>@SimilarWeb</a>.
